[package]
name = "crius"
version = "0.4.0"
authors = ["Rene Weber <weber.rene@live.de>"]

description = "Crius is a simple hystrix-like circuit breaker"
license = "Apache-2.0"
readme = "README.md"

homepage = "https://github.com/reneweb/crius"
repository = "https://github.com/reneweb/crius"

keywords = ["circuit-breaker", "command", "hystrix"]
categories = ["web-programming", "asynchronous", "concurrency"]

[badges]

travis-ci = { repository = "reneweb/crius", branch = "master" }
